--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Taras Labiak</title>
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
@@ -12,42 +13,63 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58031952-14"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+
   gtag('js', new Date());
 
   gtag('config', 'UA-58031952-14');
 </script>
 
 <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
+<script type="text/javascript">
   (function (d, w, c) {
-    (w[c] = w[c] || []).push(function() {
+    (w[c] = w[c] || []).push(function () {
       try {
         w.yaCounter38832885 = new Ya.Metrika({
-          id:38832885,
-          clickmap:true,
-          trackLinks:true,
-          accurateTrackBounce:true
+          id: 38832885,
+          clickmap: true,
+          trackLinks: true,
+          accurateTrackBounce: true
         });
-      } catch(e) { }
+      } catch (e) {
+      }
     });
 
     var n = d.getElementsByTagName("script")[0],
         s = d.createElement("script"),
-        f = function () { n.parentNode.insertBefore(s, n); };
+        f = function () {
+          n.parentNode.insertBefore(s, n);
+        };
     s.type = "text/javascript";
     s.async = true;
     s.src = "https://mc.yandex.ru/metrika/watch.js";
 
     if (w.opera == "[object Opera]") {
       d.addEventListener("DOMContentLoaded", f, false);
-    } else { f(); }
+    } else {
+      f();
+    }
   })(document, window, "yandex_metrika_callbacks");
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/38832885" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<noscript>
+    <div><img src="https://mc.yandex.ru/watch/38832885" style="position:absolute; left:-9999px;" alt=""/></div>
+</noscript>
 <!-- /Yandex.Metrika counter -->
 
-<img id="avatar" src="https://instagram.fiev4-1.fna.fbcdn.net/vp/1dfe9b8dd04d799ac74112cc0a6bf41a/5C270929/t51.2885-15/e35/39933858_2101791893371424_6712641488855917763_n.jpg"/>
+<header>
+    <img id="avatar"
+         src="https://instagram.fiev4-1.fna.fbcdn.net/vp/1dfe9b8dd04d799ac74112cc0a6bf41a/5C270929/t51.2885-15/e35/39933858_2101791893371424_6712641488855917763_n.jpg"/>
+    <h1>Taras Labiak</h1>
+</header>
+<article>
+    PostgreSQL, Vue.js, React.js, jQuery, HTML, CSS, SVG, Node.js, Electron,
+    express.js, Meteor, REST/HTTP, PHP 7 (Yii2), Python, tornado, MySQL,
+    MongoDB, IndexedDB, C#, .NET, WPF, Silverlight, Bash, C/C++, Java,
+    Git, Mercurial. Bitcoin, Ethereum (parity) node configuration and usage through API
+</article>
 <script src="script.js"></script>
 </body>
 </html>
