--- a/index.html
+++ b/index.html
@@ -106,6 +106,32 @@
                 MongoDB, IndexedDB, C#, .NET, WPF, Silverlight, Bash, C/C++, Java,
                 Git, Mercurial. Bitcoin, Ethereum (parity) node configuration and usage through API
             </dd>
+            <dt>Experience</dt>
+            <dd>
+                <h3 v-cloak>{{ ico }}</h3>
+                <p>Investment project. PHP/Yii2, PostgreSQL, Vue.js. Work with payment systems Perfect Money, AdvCash,
+                    Payeer, Bitcoin (using block.io), Ethereum (using parity)
+                </p>
+
+                <h3>MLBot for Skype</h3>
+                <p>Massive (and periodic) message sender, importing and adding contact list, automatic deletion
+                    of contacts. The backend is implemented on Node.js and PostgreSQL, the
+                    frontend is made using Electron, React.js.
+                </p>
+
+                <h3>Evart Social Network</h3>
+                <p>
+                    The social network. Node.js + Marionette.js
+                    <a href="https://github.com/kissarat/evart-social-network-node.js">https://github.com/kissarat/evart-social-network-node.js</a>
+                    and on Meteor.js + React
+                    <a href="https://github.com/kissarat/evart-social-network-node.js">https://github.com/kissarat/evart-social-network-meteor</a>.
+                </p>
+
+                <h3>BestChoice Club</h3>
+                <p>Investment project with a matrix structure. PHP/Yii2, PostgreSQL, Vue.js. Work with payment systems
+                    Perfect Money, AdvCash, Payeer
+                </p>
+            </dd>
         </dl>
     </article>
 </div>
