--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
                     <div class="label">Phone</div>
                     <a href="tel:+380671541943" class="value">+380671541943</a>
                 </div>
+                <div class="tile">
+                    <div class="label">Experience</div>
+                    <div class="value">3 years</div>
+                </div>
+                <div class="tile">
+                    <div class="label">Skype</div>
+                    <div class="value">taradox89</div>
+                </div>
                 <div>
                     <div class="label">Facebook</div>
                     <a href="https://www.facebook.com/kissarat" class="value">www.facebook.com/kissarat</a>
