--- a/index.html
+++ b/index.html
@@ -144,6 +144,22 @@
                     Perfect Money, AdvCash, Payeer
                 </p>
             </dd>
+            <dt>Education</dt>
+            <dd id="education">
+                <div>
+                    <div>2006 - 2011</div>
+                    <div>
+                        Bachelor's degree, Computer Systems and Networks | Ternopil Ivan Pul'uj
+                        National Technical University
+                    </div>
+                </div>
+                <div>
+                    <div>2002 - 2006</div>
+                    <div>
+                        High school degree | Technical Liceum
+                    </div>
+                </div>
+            </dd>
             <dt>Own Projects</dt>
             <dd>
                 <h3>Never Loose</h3>
@@ -152,7 +168,8 @@
                     that makes snapshots at
                     achive.org of any pages every visit</p>
                 <h3>Dominant</h3>
-                <p>Google Chrome extension (<a href="https://github.com/kissarat/dominant">https://github.com/kissarat/dominant</a>) for commenting any
+                <p>Google Chrome extension (<a href="https://github.com/kissarat/dominant">https://github.com/kissarat/dominant</a>)
+                    for commenting any
                     element of any HTML page. User can see comment of other users</p>
                 <h3>prom.ua JSON gateway</h3>
                 <p>Gateway, that accepts any URL of prom.ua, parse appropriate page and respond in JSON
