--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="last-modified" content="Fri, 07 Sep 2018 02:02:00 GMT"/>
-    <title>Taras Labiak</title>
+    <meta name="description" content="PHP, Node.js, Python and Go Full Stack Developer"/>
+    <title>Taras Labiak - Resume</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
@@ -78,7 +79,7 @@
                 <span itemprop="givenName">Taras</span>
                 <span itemprop="familyName">Labiak</span>
             </h1>
-            <h2>Full Stack Developer</h2>
+            <h2>PHP, Node.js, Python Full Stack Developer</h2>
             <!--<a class="export">PDF</a>-->
             <div class="abstract">
                 <div class="tile">
@@ -123,10 +124,10 @@
         <dl>
             <dt>Summary</dt>
             <dd itemprop="description">
-                PostgreSQL, Vue.js, React.js, jQuery, HTML, SCSS, SVG, Node.js, Electron,
-                express.js, Meteor, REST/HTTP, PHP 7 (Yii2), Python, tornado, MySQL,
-                MongoDB, IndexedDB, C#, .NET, WPF, Silverlight, Bash, C/C++, Java,
-                Git, Mercurial. Bitcoin, Ethereum (parity) node configuration and usage through API
+                PHP 7, Python 3, JavaScript, C/C++, C#, Java, Go, Bash, HTML, SCSS, SVG, Vue.js, React.js, jQuery,
+                Node.js, Electron, express.js, Meteor, REST/HTTP, Yii 2, tornado, PostgreSQL, MySQL,
+                MongoDB, IndexedDB, .NET, WPF, Silverlight, Git, Mercurial. Bitcoin,
+                Ethereum (parity) node configuration and usage through API
             </dd>
             <dt>Experience</dt>
             <dd>
@@ -152,6 +153,11 @@
                 <h3>BestChoice Club</h3>
                 <p>Investment project with a matrix structure. PHP/Yii2, PostgreSQL, Vue.js. Work with payment systems
                     Perfect Money, AdvCash, Payeer
+                </p>
+
+                <h3>IntelSCADA</h3>
+                <p>Python/JavaScript Developer. Smart home management system.
+                    My role is the development of a room sensor editor. Created on the basis of SVG format
                 </p>
             </dd>
             <dt>Education</dt>
