--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="last-modified" content="Fri, 07 Sep 2018 02:02:00 GMT"/>
     <meta name="description" content="PHP, Node.js, Python and Go Full Stack Developer"/>
+    <meta name="yandex-verification" content="2cabd63aac7afffc" />
     <title>Taras Labiak - Resume</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
