--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <dd itemprop="description">
                 PHP 7, Python 3, JavaScript, C/C++, C#, Java, Go, Bash, HTML, SCSS, SVG, Vue.js, React.js, jQuery,
                 Node.js, Electron, express.js, Meteor, REST/HTTP, Yii 2, tornado, PostgreSQL, MySQL,
-                MongoDB, IndexedDB, .NET, WPF, Silverlight, Git, Mercurial. Bitcoin,
+                MongoDB, IndexedDB, .NET, WPF, Silverlight, Git, Mercurial, Docker, Redis. Bitcoin,
                 Ethereum (parity) node configuration and usage through API
             </dd>
             <dt>Experience</dt>
