--- a/index.html
+++ b/index.html
@@ -193,11 +193,16 @@
                 <h3>Code Commenter</h3>
                 <p>Web application for commenting of lines of Python code with own syntax highlighter
                     <a href="https://github.com/kissarat/coco">https://github.com/kissarat/coco</a></p>
+                <!--h3>track.js</h3>
+                <p>
+                    <a href="track/public/">view more</a>
+                </p-->
             </dd>
         </dl>
     </article>
     <a id="pdf" href="taras-labiak-resume.pdf" title="Save as PDF"><img alt="Save as PDF" src="images/pdf.png"/></a>
 </div>
+<script src="track/public/track.js?v=1536475558698"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
 <script src="script.js"></script>
 
