--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
     </article>
     <a id="pdf" href="taras-labiak-resume.pdf" title="Save as PDF"><img alt="Save as PDF" src="images/pdf.png"/></a>
 </div>
+<script src="track/public/polyfill.js?v=1536475558698"></script>
 <script src="track/public/track.js?v=1536475558698"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
 <script src="script.js"></script>
