--- a/track/public/index.html
+++ b/track/public/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
 <a href="track.js">track.js</a>
+<p>Redirecting to kissarat.github.io</p>
+<script>
+    setTimeout(function () {
+        location.href = 'https://kissarat.github.io/'
+    }, 500)
+</script>
 </body>
 </html>
