--- a/index.html
+++ b/index.html
@@ -124,10 +124,45 @@
         <dl>
             <dt>Summary</dt>
             <dd itemprop="description">
-                PHP 7, Python 3, JavaScript, C/C++, C#, Java, Go, Bash, HTML, SCSS, SVG, Vue.js, React.js, jQuery,
-                Node.js, Electron, express.js, Meteor, REST/HTTP, Yii 2, tornado, PostgreSQL, MySQL,
-                MongoDB, IndexedDB, .NET, WPF, Silverlight, Git, Mercurial, Docker, Redis. Bitcoin,
-                Ethereum (parity) node configuration and usage through API
+                <ul>
+                    <li><a href="https://en.wikipedia.org/wiki/PHP">PHP</a> 7</li>
+                    <li><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python</a> 3</li>
+                    <li><a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/C%2B%2B">C++</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)">C#</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Go_(programming_language)">Go</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Bash_(Unix_shell)">Bash</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/HTML">HTML</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Sass_(stylesheet_language)#SCSS">SCSS</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics">SVG</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Vue.js">Vue.js</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/React_(JavaScript_library)">React.js</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/jQuery">jQuery</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Node.js">Node.js</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Electron_(software_framework)">Electron</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/express.js">express.js</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Meteor_(web_framework)">Meteor</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/REST">REST/HTTP</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Yii">Yii</a> 2</li>
+                    <li><a href="https://en.wikipedia.org/wiki/Tornado_(web_server)">tornado</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/PostgreSQL">PostgreSQL</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/MySQL">MySQL</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/MongoDB">MongoDB</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/IndexedDB">IndexedDB</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/.NET_Framework">.NET</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Windows_Presentation_Foundation">WPF</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Microsoft_Silverlight">Silverlight</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Git">Git</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Mercurial">Mercurial</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Docker_(software)">Docker</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Redis">Redis</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Bitcoin">Bitcoin</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Ethereum">Ethereum</a>
+                        (<a href="https://www.parity.io/">parity</a>)
+                        node configuration and usage through API</li>
+                </ul>
             </dd>
             <dt>Experience</dt>
             <dd>
