--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                     <li><a href="https://en.wikipedia.org/wiki/HTML">HTML</a></li>
                     <li><a href="https://en.wikipedia.org/wiki/Sass_(stylesheet_language)#SCSS">SCSS</a></li>
                     <li><a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics">SVG</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Solidity">Solidity</a></li>
                     <li><a href="https://en.wikipedia.org/wiki/Vue.js">Vue.js</a></li>
                     <li><a href="https://en.wikipedia.org/wiki/React_(JavaScript_library)">React.js</a></li>
                     <li><a href="https://en.wikipedia.org/wiki/jQuery">jQuery</a></li>
