--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
                 <dt>Summary</dt>
                 <dd itemprop="description">
                     <ul>
+                        <li>Software designing and architecting</li>
                         <li><a href="https://en.wikipedia.org/wiki/PHP">PHP</a></li>
-                        <li><a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>/ES6</li>
                         <li><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/C%2B%2B">C++</a></li>
@@ -130,35 +131,50 @@
                         <li><a href="https://en.wikipedia.org/wiki/Go_(programming_language)">Go</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Solidity">Solidity</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Bash_(Unix_shell)">Bash</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/SQL">SQL</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/HTML">HTML</a></li>
-                        <li><a href="https://en.wikipedia.org/wiki/Sass_(stylesheet_language)#SCSS">SCSS</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Sass_(stylesheet_language)#SCSS">SCSS</a>, SASS, CSS</li>
                         <li><a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics">SVG</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Vue.js">Vue.js</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/React_(JavaScript_library)">React.js</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/jQuery">jQuery</a></li>
+                        <li><a href="https://marionettejs.com/">Marionette.js</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/webpack">webpack</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Gulp.js">Gulp.js</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Node.js">Node.js</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Electron_(software_framework)">Electron</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/express.js">express.js</a></li>
+                        <li><a href="https://knexjs.org/">knex.js</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Meteor_(web_framework)">Meteor</a></li>
-                        <li><a href="https://en.wikipedia.org/wiki/REST">REST/HTTP</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/REST">REST</a>/HTTP</li>
+                        <li><a href="https://en.wikipedia.org/wiki/WebSocket">WebSocket</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/WebRTC">WebRTC</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Yii">Yii</a> 2</li>
                         <li><a href="https://en.wikipedia.org/wiki/Tornado_(web_server)">tornado</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/NoSQL">NoSQL</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/PostgreSQL">PostgreSQL</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/MySQL">MySQL</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/MongoDB">MongoDB</a></li>
+                        <li><a href="https://mongoosejs.com/">Mongoose.js</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/IndexedDB">IndexedDB</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Redis">Redis</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Amazon_Web_Services">AWS</a> EC2</li>
                         <li><a href="https://en.wikipedia.org/wiki/.NET_Framework">.NET</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Windows_Presentation_Foundation">WPF</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Microsoft_Silverlight">Silverlight</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Git">Git</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Mercurial">Mercurial</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Docker_(software)">Docker</a></li>
-                        <li><a href="https://en.wikipedia.org/wiki/Redis">Redis</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Linux">Linux</a> web server configuration</li>
+                        <li><a href="https://en.wikipedia.org/wiki/macOS">macOS</a> workstation</li>
                         <li><a href="https://en.wikipedia.org/wiki/Bitcoin">Bitcoin</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Ethereum">Ethereum</a>
                             (<a href="https://www.parity.io/">parity</a>)
                             node configuration and usage through API
                         </li>
+                        <li><a href="https://en.wikipedia.org/wiki/Model%E2%80%93view%E2%80%93controller">MVC</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Model%E2%80%93view%E2%80%93viewmodel">MVVM</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Software_design_pattern">Design pattern</a></li>
                     </ul>
                 </dd>
                 <dt>Experience</dt>
