--- a/index.html
+++ b/index.html
@@ -354,6 +354,8 @@
 <script src="track/public/track.js?v=1536475558698"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
 <script src="script.js"></script>
-
+<div id="hired">
+    <h1>Hired by <a href="https://indeema.com/">Indeema</a></h1>
+</div>
 </body>
 </html>
