--- a/comparator/index.html
+++ b/comparator/index.html
@@ -29,6 +29,7 @@
         textarea {
             height: calc(100% - 20px);
             min-width: calc(100% / 2 - 20px);
+            resize: none;
         }
 
         #error {
